# seatplan

./: .gitignore  DOCUMENTATION.md  MANIFEST.in  README.md  pretixplugin.toml  pyproject.toml  setup.cfg
data/: .secret
pretix_simpleseatingplan/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
pretix_simpleseatingplan/migrations/: 0001_initial.py
pretix_simpleseatingplan/static/pretix_simpleseatingplan/frontend/: seatpicker.css  seatpicker.js
pretix_simpleseatingplan/templates/pretix_simpleseatingplan/control/: settings.html
