[metadata]
name = pretix-simpleseatingplan
version = 0.8.0
description = Simple reserved seating (SVG/JSON) for pretix 2026.x
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    pretix>=2025.6

[options.entry_points]
pretix.plugin =
    pretix_simpleseatingplan = pretix_simpleseatingplan:PluginApp
